fixed footer spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,8 @@ body {
 } 
 
 footer {
+  display: flex;
+  justify-content: space-evenly;
   clear: both;
   text-align: center;
   background-color: #444754;
